--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,15 @@
     "files.associations": {
         "*.c": "cpp",
         "*.h": "cpp",
+        "*.tcc": "cpp",
+        "exception": "cpp",
+        "fstream": "cpp",
+        "iosfwd": "cpp",
+        "new": "cpp",
         "ostream": "cpp",
-        "iostream": "cpp",
-        "initializer_list": "cpp"
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "memory_resource": "cpp",
+        "chrono": "cpp"
     }
 }
