--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,22 @@
 {
+    "version": "2.0.0",
     "tasks": [
         {
-            "type": "cppbuild",
-            "label": "C/C++: g++ 生成活动文件",
-            "command": "/usr/bin/g++",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
+            "type": "shell",
+            "label": "Build C++",
+            "command": "clang++",// 在终端输入的命令
+            "args": [          // 给命令的一些参数
+                "-g",          // debug模式
+                "-Wall",       //开启所有警告
+                "-std=c++20", // C++语言标准
                 "-o",
-                "${fileDirname}/build/${fileBasenameNoExtension}"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
+                "${workspaceFolder}/build/${fileBasenameNoExtension}", //编译完存放的路径,与launch.json文件对应
+                "${file}"      // 当前打开的文件
             ],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            },
-            "detail": "调试器生成的任务。"
+            }
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
